--- a/index.html
+++ b/index.html
@@ -1,15 +1,10 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-
+<!DOCTYPE html>
 <html>
-
-<head>
-    <title>My First HTML Page</title>
-</head>
-
 <body>
 
-    My text goes here.
+<h1>My First Heading</h1>
+
+<p>My first paragraph.</p>
 
 </body>
-
 </html>
